--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,7 +23,7 @@ set -g set-titles off
 #setw -g automatic-rename
 
 # Set status bar
-set -g status-position top
+set -g status-position bottom
 set -g status-bg black
 set -g status-fg white
 
