--- a/.tmux.conf
+++ b/.tmux.conf
@@ -76,7 +76,8 @@ set-option -g status-style "fg=colour7,bg=colour0"
 # Instruct tmux to treat top-bit-set characters in the status-left and
 # status-right strings as UTF-8; notably, this is important for wide
 # characters.  This option defaults to off.
-set-option -g status-utf8 on
+# set-option -g status-utf8 on
+# DEPRECATED AS OF VERSION 2.2
 
 # If on, display a status line message when activity occurs in a window for
 # which the monitor-activity window option is enabled.
