--- a/.gitconfig
+++ b/.gitconfig
@@ -20,4 +20,5 @@
 [core]
     editor = vim
 [credential]
-	helper = cache --timeout=36000
+    # Number of seconds to cache credentials
+    helper = cache --timeout=360000
