status line simplified and moved to the bottom

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -68,7 +68,8 @@ set-option -g status-interval 1
 set-option -g status-justify left
 
 # Set the position of the status line.
-set-option -g status-position top
+# set-option -g status-position top
+set-option -g status-position bottom
 
 # Set status line style.
 set-option -g status-style "fg=colour7,bg=colour0"
@@ -105,7 +106,8 @@ set-option -g status-left-length 10
 ### Right ###
 # Display string to the right of the status bar.
 # set -g status-right "%a %d %b, %H:%M"
-set-option -g status-right "#[fg=colour0,bg=colour4] %a %d %b, %H:%M #[none,fg=default,bg=default] #H "
+# set-option -g status-right "#[fg=colour0,bg=colour4] %a %d %b, %H:%M #[none,fg=default,bg=default] #H "
+set-option -g status-right "#[fg=colour4,bg=colour0,bold] #H #[none,fg=default,bg=default] "
 
 # Set the maximum length of the left component of the status bar.  The default
 # is 40.
