--- a/.tmux.conf
+++ b/.tmux.conf
@@ -68,8 +68,8 @@ set-option -g status-interval 1
 set-option -g status-justify left
 
 # Set the position of the status line.
-# set-option -g status-position top
-set-option -g status-position bottom
+set-option -g status-position top
+# set-option -g status-position bottom
 
 # Set status line style.
 set-option -g status-style "fg=colour7,bg=colour0"
@@ -93,7 +93,9 @@ set-option -g visual-bell off
 
 ### Left ###
 # Display string (by default the session name) to the left of the status bar.
-set-option -g status-left " "
+# set-option -g status-left " "
+# set -g status-left "#[bg=red]#{s/root//:client_key_table}"
+set -g status-left '#{?client_prefix,#[bg=magenta fg=white]✱,#[fg=black] }'
 
 # Set the maximum length of the left component of the status bar.  The default
 # is 10.
