--- a/.tmux.conf
+++ b/.tmux.conf
@@ -94,7 +94,7 @@ set-option -g visual-bell off
 ### Left ###
 # Display string (by default the session name) to the left of the status bar.
 # set-option -g status-left " "
-# set -g status-left "#[bg=red]#{s/root//:client_key_table}"
+# shows ✱ when prefix key is pressed
 set -g status-left '#{?client_prefix,#[bg=magenta fg=white]✱,#[fg=black] }'
 
 # Set the maximum length of the left component of the status bar.  The default
