--- a/.tmux.conf
+++ b/.tmux.conf
@@ -95,7 +95,7 @@ set-option -g visual-bell off
 # Display string (by default the session name) to the left of the status bar.
 # set-option -g status-left " "
 # shows ✱ when prefix key is pressed
-set -g status-left '#{?client_prefix,#[bg=magenta fg=white]✱,#[fg=black] }'
+set -g status-left '#{?client_prefix,#[bg=magenta fg=magenta] ,#[fg=black] }'
 
 # Set the maximum length of the left component of the status bar.  The default
 # is 10.
