--- a/.tmux.conf
+++ b/.tmux.conf
@@ -68,8 +68,8 @@ set-option -g status-interval 1
 set-option -g status-justify left
 
 # Set the position of the status line.
-# set-option -g status-position top
-set-option -g status-position bottom
+set-option -g status-position top
+# set-option -g status-position bottom
 
 # Set status line style.
 set-option -g status-style "fg=colour7,bg=colour0"
