--- a/.muttrc
+++ b/.muttrc
@@ -27,7 +27,7 @@ set sort=threads  # use the threaded view
 # set sort_aux=last-date-received
 set sort_aux=reverse-last-date-received
 set strict_threads=no
-set index_format="%[%d/%b/%Y]  %-15.15n %s (%g)"
+set index_format="%[%d/%b/%Y]  %-15.15L %s (%g)"
 set pager_format="%[%d/%b/%Y %H:%m]  %-20.20n %s (%g)"
 set nomarkers
 set wrap=150  # When set to a positive value, mutt will wrap text at $wrap characters. When set to a negative value, mutt will wrap text so that there are $wrap characters of empty space on the right side of the terminal. Setting it to zero makes mutt wrap at the terminal width.
