--- a/.muttrc
+++ b/.muttrc
@@ -1,5 +1,6 @@
 
-set from="tkngch@runbox.com"
+# set from="tkngch@runbox.com"
+set from="t.noguchi@qmul.ac.uk"
 set realname="Takao Noguchi"
 
 set mbox_type=Maildir
@@ -12,10 +13,11 @@ set delete=ask-yes  # Ask before doing a delete.
 set include  # Include the message in replies.
 set edit_headers  # edit all headers lines in the editor
 unmy_hdr User-Agent
-my_hdr Bcc: tkngch@runbox.com
+my_hdr Bcc: t.noguchi@qmul.ac.uk, tkngch@runbox.com
 # my_hdr User-Agent: Batman
 
-alternates "(t\.noguchi|takao\.noguchi)\@(warwick|ucl|qmul)\.ac\.uk|tkngch\@(hotmail|gmx|gmail)\.com"
+# alternates "(t\.noguchi|takao\.noguchi)\@(warwick|ucl|qmul)\.ac\.uk|tkngch\@(hotmail|gmx|gmail)\.com"
+alternates "t\.noguchi\@qmul\.ac\.uk"
 
 # set editor="/usr/bin/vim '+/^$' -f"
 set editor="/usr/bin/vim +8 -f"
@@ -27,7 +29,8 @@ set sort=threads  # use the threaded view
 # set sort_aux=last-date-received
 set sort_aux=reverse-last-date-received
 set strict_threads=no
-set index_format="%[%d/%b/%Y]  %-15.15n %s (%g)"
+# set index_format="%[%d/%b/%Y]  %-15.15n %s (%g)"
+set index_format="%[%d/%b/%Y]  %-15.15L %s (%g)"
 set pager_format="%[%d/%b/%Y %H:%m]  %-20.20n %s (%g)"
 set nomarkers
 set wrap=150  # When set to a positive value, mutt will wrap text at $wrap characters. When set to a negative value, mutt will wrap text so that there are $wrap characters of empty space on the right side of the terminal. Setting it to zero makes mutt wrap at the terminal width.
