--- a/.muttrc
+++ b/.muttrc
@@ -1,6 +1,6 @@
 
-# set from="tkngch@runbox.com"
-set from="t.noguchi@qmul.ac.uk"
+set from="tkngch@runbox.com"
+# set from="t.noguchi@qmul.ac.uk"
 set realname="Takao Noguchi"
 
 set mbox_type=Maildir
@@ -16,8 +16,8 @@ unmy_hdr User-Agent
 my_hdr Bcc: t.noguchi@qmul.ac.uk, tkngch@runbox.com
 # my_hdr User-Agent: Batman
 
-# alternates "(t\.noguchi|takao\.noguchi)\@(warwick|ucl|qmul)\.ac\.uk|tkngch\@(hotmail|gmx|gmail)\.com"
-alternates "t\.noguchi\@qmul\.ac\.uk"
+alternates "(t\.noguchi|takao\.noguchi)\@(warwick|ucl|qmul)\.ac\.uk|tkngch\@(hotmail|gmx|gmail)\.com"
+# alternates "t\.noguchi\@qmul\.ac\.uk"
 
 # set editor="/usr/bin/vim '+/^$' -f"
 set editor="/usr/bin/vim +8 -f"
