--- a/.tmux.conf
+++ b/.tmux.conf
@@ -245,8 +245,10 @@ set-option -g status-keys vi
 # ‘vi’.
 set-window-option -g mode-keys vi
 
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+# bind-key -t vi-copy 'v' begin-selection
+# bind-key v begin-selection
+# bind-key -t vi-copy 'y' copy-selection
+# bind-key y copy-selection
 
 bind-key j select-pane -D
 bind-key k select-pane -U
