--- a/.tmux.conf
+++ b/.tmux.conf
@@ -178,6 +178,8 @@ set-window-option -g window-status-separator ""
 
 # Set the default window style.
 set-window-option -g window-style "fg=colour7,bg=colour8"
+# foreground (fg) and background (bg) colors for inactive panes
+set-window-option -g window-style "fg=colour7,bg=colour8"
 
 # Set the pane border style for panes aside from the active pane.
 set-window-option -g pane-border-style "fg=colour0,bg=colour0"
