--- a/.tmux.conf
+++ b/.tmux.conf
@@ -95,7 +95,8 @@ set-option -g visual-bell off
 # Display string (by default the session name) to the left of the status bar.
 # set-option -g status-left " "
 # shows ✱ when prefix key is pressed
-set -g status-left '#{?client_prefix,#[bg=magenta fg=magenta] ,#[fg=black] }'
+# set -g status-left '#{?client_prefix,#[bg=magenta fg=magenta] ,#[fg=black] }'
+set -g status-left '#{?client_prefix,#[bg=default fg=magenta bold],#[bg=default fg=green bold]} #S '
 
 # Set the maximum length of the left component of the status bar.  The default
 # is 10.
@@ -109,7 +110,8 @@ set-option -g status-left-length 10
 # Display string to the right of the status bar.
 # set -g status-right "%a %d %b, %H:%M"
 # set-option -g status-right "#[fg=colour0,bg=colour4] %a %d %b, %H:%M #[none,fg=default,bg=default] #H "
-set-option -g status-right "#[fg=colour4,bg=colour0,bold] #H #[none,fg=default,bg=default] "
+# set-option -g status-right "#[fg=colour4,bg=colour0,bold] #H #[none,fg=default,bg=default] "
+set-option -g status-right "%H:%M #[fg=colour4,bg=colour0,bold]#H #[none,fg=default,bg=default]"
 
 # Set the maximum length of the left component of the status bar.  The default
 # is 40.
