tmux color. now default background and foreground colors.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -148,7 +148,7 @@ set-window-option -g automatic-rename on
 set-window-option -g monitor-activity on
 
 # Set the style for the window's active pane.
-set-window-option -g window-active-style "fg=colour15,bg=colour0"
+# set-window-option -g window-active-style "fg=colour15,bg=colour0"
 
 # Set status line style for windows with an activity alert.
 set-window-option -g window-status-activity-style "none,bold"
@@ -162,7 +162,7 @@ set-window-option -g window-status-bell-style "none"
 set-window-option -g window-status-current-format " #I.#W "
 
 # Set status line style for the currently active window.
-set-window-option -g window-status-current-style "fg=colour0,bg=colour6"
+# set-window-option -g window-status-current-style "fg=colour0,bg=colour6"
 
 # Set the format in which the window is displayed in the status line window
 # list.
@@ -179,9 +179,9 @@ set-window-option -g window-status-separator ""
 # window-status-style style
 
 # Set the default window style.
-set-window-option -g window-style "fg=colour7,bg=colour8"
+# set-window-option -g window-style "fg=colour7,bg=black"
 # foreground (fg) and background (bg) colors for inactive panes
-set-window-option -g window-style "fg=colour7,bg=colour8"
+# set-window-option -g window-style "fg=colour7,bg=colour8"
 
 # Set the pane border style for panes aside from the active pane.
 set-window-option -g pane-border-style "fg=colour0,bg=colour0"
