--- a/.tmux.conf
+++ b/.tmux.conf
@@ -72,7 +72,7 @@ set-option -g status-position top
 # set-option -g status-position bottom
 
 # Set status line style.
-set-option -g status-style "fg=colour7,bg=colour0"
+set-option -g status-style "fg=default,bg=default"
 
 # Instruct tmux to treat top-bit-set characters in the status-left and
 # status-right strings as UTF-8; notably, this is important for wide
@@ -96,7 +96,7 @@ set-option -g visual-bell off
 # set-option -g status-left " "
 # shows ✱ when prefix key is pressed
 # set -g status-left '#{?client_prefix,#[bg=magenta fg=magenta] ,#[fg=black] }'
-set -g status-left '#{?client_prefix,#[bg=default fg=magenta bold],#[bg=default fg=green bold]} #S '
+set -g status-left '#{?client_prefix,#[bg=default fg=colour5 bold],#[bg=default fg=colour2 bold]} #S '
 
 # Set the maximum length of the left component of the status bar.  The default
 # is 10.
@@ -111,7 +111,7 @@ set-option -g status-left-length 10
 # set -g status-right "%a %d %b, %H:%M"
 # set-option -g status-right "#[fg=colour0,bg=colour4] %a %d %b, %H:%M #[none,fg=default,bg=default] #H "
 # set-option -g status-right "#[fg=colour4,bg=colour0,bold] #H #[none,fg=default,bg=default] "
-set-option -g status-right "%a %d %b %H:%M #[fg=colour4,bg=colour0]@#[bold]#H #[none,fg=default,bg=default]"
+set-option -g status-right "#[fg=colour7]%a %d %b %H:%M #[fg=colour4]@#[bold]#H #[none,fg=default,bg=default]"
 
 # Set the maximum length of the left component of the status bar.  The default
 # is 40.
@@ -162,7 +162,7 @@ set-window-option -g window-status-bell-style "none"
 set-window-option -g window-status-current-format " #I.#W "
 
 # Set status line style for the currently active window.
-# set-window-option -g window-status-current-style "fg=colour0,bg=colour6"
+set-window-option -g window-status-current-style "fg=default,bg=default"
 
 # Set the format in which the window is displayed in the status line window
 # list.
@@ -179,15 +179,14 @@ set-window-option -g window-status-separator ""
 # window-status-style style
 
 # Set the default window style.
-# set-window-option -g window-style "fg=colour7,bg=black"
 # foreground (fg) and background (bg) colors for inactive panes
-# set-window-option -g window-style "fg=colour7,bg=colour8"
+set-window-option -g window-style "fg=default,bg=default"
 
 # Set the pane border style for panes aside from the active pane.
-set-window-option -g pane-border-style "fg=colour0,bg=colour0"
+set-window-option -g pane-border-style "fg=default,bg=default"
 
 # Set the pane border style for the currently active pane.
-set-window-option -g pane-active-border-style "fg=colour0,bg=colour0"
+set-window-option -g pane-active-border-style "fg=default,bg=default"
 
 
 #################
