--- a/.tmux.conf
+++ b/.tmux.conf
@@ -183,10 +183,10 @@ set-window-option -g window-status-separator ""
 set-window-option -g window-style "fg=default,bg=default"
 
 # Set the pane border style for panes aside from the active pane.
-set-window-option -g pane-border-style "fg=default,bg=default"
+set-window-option -g pane-border-style "fg=colour0,bg=default"
 
 # Set the pane border style for the currently active pane.
-set-window-option -g pane-active-border-style "fg=default,bg=default"
+set-window-option -g pane-active-border-style "fg=colour0,bg=default"
 
 
 #################
