--- a/.tmux.conf
+++ b/.tmux.conf
@@ -162,7 +162,7 @@ set-window-option -g window-status-bell-style "none"
 set-window-option -g window-status-current-format " #I.#W "
 
 # Set status line style for the currently active window.
-set-window-option -g window-status-current-style "fg=default,bg=default"
+set-window-option -g window-status-current-style "fg=colour14,bg=default"
 
 # Set the format in which the window is displayed in the status line window
 # list.
