--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,6 +22,8 @@ set -g default-command /bin/zsh
 # as a login shell.
 set -g default-shell /bin/zsh
 
+# Set the maximum number of lines held in window history.
+set -g history-limit 10000
 
 
 # FORMATS #
@@ -93,8 +95,6 @@ set-option -g visual-bell off
 
 ### Left ###
 # Display string (by default the session name) to the left of the status bar.
-# set-option -g status-left " "
-# shows ✱ when prefix key is pressed
 # set -g status-left '#{?client_prefix,#[bg=magenta fg=magenta] ,#[fg=black] }'
 set -g status-left '#{?client_prefix,#[bg=default fg=colour5 bold],#[bg=default fg=colour2 bold]} #S '
 
@@ -116,9 +116,6 @@ set-option -g status-right "#[fg=colour7]%a %d %b %H:%M #[fg=colour4]@#[bold]#H 
 # Set the maximum length of the left component of the status bar.  The default
 # is 40.
 set-option -g status-right-length 40
-
-# Set the style of the right part of the status line.
-# set -g status-right-style style
 
 # set -g status-right "#[fg=cyan]#(/home/takao/bin/tmux_system_status/tmux_system_status)" # | #[bold]%a %d %B, %H:%M" #'#H'
 
@@ -196,16 +193,6 @@ set-window-option -g pane-active-border-style "fg=colour0,bg=default"
 # If on, tmux captures the mouse and allows mouse events to be bound as key bindings.
 set-option -g mouse on
 
-# For mouse wheel scrolling as from tmux 2.1 try adding one or both of these to ~/.tmux.conf
-bind -T root WheelUpPane   if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
-bind -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
-
-# Though the above will only scroll one line at a time, add this solution to scroll an entire page instead
-# bind -t vi-copy    WheelUpPane   page-up
-# bind -t vi-copy    WheelDownPane page-down
-# bind -t emacs-copy WheelUpPane   page-up
-# bind -t emacs-copy WheelDownPane page-down
-
 
 ###################################################
 ############## key bindings #######################
@@ -222,19 +209,12 @@ set-option -g prefix C-a
 unbind-key C-b
 bind-key a send-prefix
 
-# Bind ^A ctrl-space to switch to the next window to the right,
-# ^A space to switch to the next window to the left, and
-# ^A ^A to switch to the last-used window:
+# Bind ^A ^A to switch to the last-used window:
 bind-key C-a last-window
-#bind-key C-Space next-window
-#bind-key Space previous-window
 
-# bind-key c new-window -c "#{pane_current_path}"
 bind-key c new-window
-# bind-key - split-window -v -c "#{pane_current_path}"
 bind-key - split-window -v
 unbind-key % # unbind default split-wondow -h
-# bind-key | split-window -h -c "#{pane_current_path}"
 bind-key | split-window -h
 
 # vi-like bindings
@@ -248,10 +228,9 @@ set-option -g status-keys vi
 # ‘vi’.
 set-window-option -g mode-keys vi
 
-# bind-key -t vi-copy 'v' begin-selection
-# bind-key v begin-selection
-# bind-key -t vi-copy 'y' copy-selection
-# bind-key y copy-selection
+bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+bind-key -Tcopy-mode-vi 'y' send -X copy-selection
+bind-key -Tcopy-mode-vi Escape send -X cancel
 
 bind-key j select-pane -D
 bind-key k select-pane -U
